<resources>
    <string name="app_name">CookBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CookBook</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredients">Ingredients</string>
    <string name="spices">Spices</string>
    <string name="steps">Steps</string>
    <string name="add_recipe_name">Recipe Name</string>
    <string name="add_recipe_save">Save</string>
    <string name="add_recipe_clear">Clear</string>
    <string name="title_activity_recipe_view">RecipeViewActivity</string>
    <string name="delete_recipe_button">Delete Selected</string>
    <string name="search_recipes_submit">Go!</string>
    <string name="edit_recipe_title">Edit Recipe</string>
</resources>
