<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddRecipeFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/add_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_recipe_name"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <EditText
        android:id="@+id/add_recipe_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingredients"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <EditText
        android:id="@+id/add_recipe_spices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/spices"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <EditText
        android:id="@+id/add_recipe_steps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/steps"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_recipe_save"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_recipe_save" />

        <Button
            android:id="@+id/add_recipe_clear"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_recipe_clear" />
    </LinearLayout>
</LinearLayout>