<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.SearchRecipesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/search_recipes_spices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/spices"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/search_recipes_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingredients"
                android:inputType="textCapWords" />

        </LinearLayout>

        <Button
            android:id="@+id/search_recipes_submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/search_recipes_submit" />
    </LinearLayout>

    <ListView
        android:id="@+id/search_recipes_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0" />

</LinearLayout>